# simply-concurrency

./: CMakeLists.txt  README.md  concurrency.hpp
.github/workflows/: test.yml
examples/: 01_basic.cpp  02_priority.cpp  CMakeLists.txt
include/simply/: concurrency.h
tests/: 01_basics.cpp  02_stop_tokens.cpp  CMakeLists.txt
